force-app/main/default/objects/clofor_com_cfs__RecordingDepreciation__c/clofor_com_cfs__RecordingDepreciation__c.object-meta.xml
<CustomObject>
    <label>Recording Depr</label>
    <nameField>
        <displayFormat>RD-{000000}</displayFormat>
        <label>RECORDING DEPRECIATION ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recording Depr</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>