force-app/main/default/objects/clofor_com_cfs__RecordingDepreciation__c/fields/clofor_com_cfs__DeprecationFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeprecationFormula__c</fullName>
    <label>DEPRECIATION FORMULA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DeprecationFormula</valueSetName>
    </valueSet>
</CustomField>