force-app/main/default/objects/clofor_com_cfs__RecordingDepreciation__c/fields/clofor_com_cfs__DepreciationCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepreciationCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPR CREDIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>RECORDING DEPR (CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>RecordingDepreciationCredit</relationshipName>
    <type>Lookup</type>
</CustomField>