force-app/main/default/objects/clofor_com_cfs__RecordingDepreciation__c/fields/clofor_com_cfs__DepreciationDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepreciationDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPR DEBIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>RECORDING DEPR (DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>RecordingDepreciationDebit</relationshipName>
    <type>Lookup</type>
</CustomField>