force-app/main/default/objects/clofor_com_cfs__RecordingDepreciation__c/fields/clofor_com_cfs__DepreciationExpenseID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepreciationExpenseID__c</fullName>
    <label>DEPRECIATION EXPENSE ID</label>
    <referenceTo>clofor_com_cfs__DepreciationExpense__c</referenceTo>
    <relationshipLabel>RECORDING DEPRECIATION</relationshipLabel>
    <relationshipName>RecordingDepreciation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>