force-app/main/default/objects/clofor_com_cfs__RecordingDepreciation__c/fields/clofor_com_cfs__OctDepreciationExpense__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OctDepreciationExpense__c</fullName>
    <label>OCT DEPRECIATION EXPENSE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>