force-app/main/default/objects/clofor_com_cfs__RecordingDepreciation__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__RecordingDepreciationName__c</columns>
    <columns>clofor_com_cfs__DepreciationExpenseID__c</columns>
    <columns>clofor_com_cfs__DepreciationMethod__c</columns>
    <columns>clofor_com_cfs__DeprecationFormula__c</columns>
    <columns>clofor_com_cfs__Year__c</columns>
    <columns>clofor_com_cfs__ACCUMULATED_DEPRECIATION__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>